www: prevent content containing long sequences of non-whitespace characters from overflowing

--- a/internal/http/www/assets/css/www.css
+++ b/internal/http/www/assets/css/www.css
@@ -53,6 +53,10 @@ code {
 }
 
 /* Bulma */
+.content {
+  word-break: break-word;
+}
+
 .content blockquote {
   font-style: italic;
 }
